--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,19 @@
 
     <title>React App</title>
 
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+
+      .like {
+        position: absolute;
+        color: yellow;
+        font-size: 1px;
+      }
+    </style>
+
     <script type="text/javascript">
       (function (l) {
         if (l.search[1] === '/') {
@@ -37,5 +50,47 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      function createLike() {
+        let like = document.createElement('div');
+        like.classList.add('like');
+        like.innerHTML = '👍';
+
+        const windowWidth = window.innerWidth;
+        const windowHeight = window.innerHeight;
+        const minSize = 1;
+        const maxSize = 10;
+        const minDelay = 500;
+        const maxDelay = 3000;
+        const minOpacity = 0.2;
+        const maxOpacity = 1;
+
+        function updateLike() {
+          let left = Math.random() * windowWidth;
+          let top = Math.random() * windowHeight;
+          let size = Math.random() * (maxSize - minSize) + minSize;
+          let delay = Math.random() * (maxDelay - minDelay) + minDelay;
+          let opacity = Math.random() * (maxOpacity - minOpacity) + minOpacity;
+
+          like.style.left = left + 'px';
+          like.style.top = top + 'px';
+          like.style.fontSize = size + 'px';
+          like.style.transitionDuration = delay + 'ms';
+          like.style.opacity = opacity;
+
+          setTimeout(updateLike, delay);
+        }
+
+        updateLike();
+
+        document.body.appendChild(like);
+      }
+
+      let numLikes = 50;
+
+      for (let i = 0; i < numLikes; i++) {
+        createLike();
+      }
+    </script>
   </body>
 </html>
